--- a/FTTBlazor/FTTBlazor.Client.csproj
+++ b/FTTBlazor/FTTBlazor.Client.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
