--- a/src/FTTBlazor.Server/FTTBlazor.Server.csproj
+++ b/src/FTTBlazor.Server/FTTBlazor.Server.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FTTBlazor.Shared\FTTBlazor.Common.csproj" />
+    <ProjectReference Include="..\FTTBlazor\FTTBlazor.csproj" />
   </ItemGroup>
 
 </Project>
