Melhorias no namespace

--- a/src/PokeAPI/PokeAPI.Server/PokeAPI.Server.csproj
+++ b/src/PokeAPI/PokeAPI.Server/PokeAPI.Server.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FTTBlazor\FTTBlazor.csproj" />
+    <ProjectReference Include="..\..\FTTBlazor\FTTBlazor.csproj" />
   </ItemGroup>
 
 </Project>
