--- a/src/FTTBlazor/FTTBlazor.csproj
+++ b/src/FTTBlazor/FTTBlazor.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FTTBlazor.Common\FTTBlazor.Common.csproj" />
+    <ProjectReference Include="..\FTTBlazor.Common\FTTBlazor.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
