--- a/src/PokeAPI/PokeAPI.Service/PokeAPI.Service.csproj
+++ b/src/PokeAPI/PokeAPI.Service/PokeAPI.Service.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
