--- a/src/PokeAPI/PokeAPI.Server/PokeAPI.Server.csproj
+++ b/src/PokeAPI/PokeAPI.Server/PokeAPI.Server.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\FTTBlazor.Common\FTTBlazor.Common.csproj" />
+    <ProjectReference Include="..\PokeAPI.Data\PokeAPI.Data.csproj" />
+    <ProjectReference Include="..\PokeAPI.Service\PokeAPI.Service.csproj" />
   </ItemGroup>
 
 </Project>
