--- a/src/PokeAPI/PokeAPI.Service/PokeAPI.Service.csproj
+++ b/src/PokeAPI/PokeAPI.Service/PokeAPI.Service.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\FTTBlazor.Common\FTTBlazor.Common.csproj" />
+    <ProjectReference Include="..\PokeAPI.Data\PokeAPI.Data.csproj" />
   </ItemGroup>
 
 </Project>
