--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  pack-push:
     env:
       CAMINHO_PROJETO: ./src/FTTBlazor/FTTBlazor.csproj
       
