--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET + NuGet
 
 on:
   push:
@@ -19,26 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.x
-        
-    - name: Restore dependencies
-      run: dotnet restore
-      
-    - name: Build
-      run: dotnet build --no-restore
-      
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-      
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v2.0.0      
-      env:
-          NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}}
-      with:
-        dotnet-version: 6.0.x
-        source-url: https://github.com/luizgustavo77/FTTBlazor.git
-        owner: luizgustavo77
-        config-file: 1.0.0
+        dotnet-version: 6.0.2
         
     - name: Geração do package
       run: dotnet pack ${{ env.CAMINHO_PROJETO }} -c Release -o out
