Update and rename dotnet.yml to nuget.yml

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -9,7 +9,7 @@ on:
     branches: [ master ]
 
 env:
-  PROJECT_PATH: ./src/FTTBlazor/FTTBlazor.csproj  
+  PROJECT_PATH: src/FTTBlazor/FTTBlazor.csproj  
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
       
 jobs:
