--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -9,8 +9,10 @@ on:
     branches: [ master ]
 
 env:
-  PROJECT_PATH: src/FTTBlazor/FTTBlazor.csproj  
+  PROJECT_PATH: 'src/FTTBlazor/FTTBlazor.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
+  NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
+
       
 jobs:
   deploy:
@@ -39,4 +41,4 @@ jobs:
       run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
 
     - name: 'Push package'
-      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ secrets.NUGET_AUTH_TOKEN }} -s ${{ secrets.NUGET_SERVER }} 
+      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ secrets.NUGET_AUTH_TOKEN }} -s ${{ env.NUGET_SOURCE_URL }}
