--- a/src/FTTBlazor/FTTBlazor.csproj
+++ b/src/FTTBlazor/FTTBlazor.csproj
@@ -18,7 +18,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<OutputPath>C:\Users\luiz_\output\</OutputPath>
+		<OutputPath>D:\a\FTTBlazor\FTTBlazor\output</OutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
