--- a/src/FTTBlazor/FTTBlazor.csproj
+++ b/src/FTTBlazor/FTTBlazor.csproj
@@ -2,31 +2,14 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<OutputType>Library</OutputType>
-		<StartupObject />
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<IsPackable>true</IsPackable>
 		<PackageId>FTTBlazor</PackageId>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<RepositoryType>https://github.com/luizgustavo77/FTTBlazor.git</RepositoryType>
-		<NeutralLanguage>pt-BR</NeutralLanguage>
+		<Version>1.0.2</Version>
 		<Authors>luizgustavo77</Authors>
-		<Product>FTTBlazor</Product>
-		<PackageTags>NuGet;.NET 6;FTT</PackageTags>
-		<AssemblyVersion>$([System.DateTime]::Now.ToString(`yyyy.MM.dd.HHmm`))</AssemblyVersion>
-		<PackageVersion>1.0.0.0</PackageVersion>
+		<PackageTags>NuGet;.NET;Classlib;GitHub;Actions</PackageTags>
+		<Description>
+			Functional study of Blazor WebAssembly with delivery of a library based on Material Design
+		</Description>
 	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<OutputPath>D:\a\FTTBlazor\FTTBlazor\output</OutputPath>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<None Include="..\..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
