--- a/src/FTTBlazor/FTTBlazor.csproj
+++ b/src/FTTBlazor/FTTBlazor.csproj
@@ -8,24 +8,30 @@
 		<IsPackable>true</IsPackable>
 		<PackageId>FTTBlazor</PackageId>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<RepositoryType>https://github.com/luizgustavo77/FTTBlazor.git</RepositoryType>
+		<RepositoryType>git</RepositoryType>
 		<NeutralLanguage>pt-BR</NeutralLanguage>
 		<Authors>luizgustavo77</Authors>
 		<Product>FTTBlazor</Product>
 		<PackageTags>NuGet;.NET 6;FTT</PackageTags>
 		<AssemblyVersion>$([System.DateTime]::Now.ToString(`yyyy.MM.dd.HHmm`))</AssemblyVersion>
-		<PackageVersion>1.0.0.0</PackageVersion>
+		<PackageVersion>1.0.0.2</PackageVersion>
 		<Description>
 			Functional study of Blazor WebAssembly with delivery of a library based on Material Design
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>logoMenu.png</PackageIcon>
+		<RepositoryUrl>https://github.com/luizgustavo77/FTTBlazor.git</RepositoryUrl>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<OutputPath>C:\Users\luiz_\output\</OutputPath>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
+		<None Include="..\..\..\..\..\Downloads\logoMenu.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 		<None Include="..\..\README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
