--- a/src/FTTBlazor/FTTBlazor.csproj
+++ b/src/FTTBlazor/FTTBlazor.csproj
@@ -2,41 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<OutputType>Library</OutputType>
-		<StartupObject />
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<IsPackable>true</IsPackable>
-		<PackageId>FTTBlazor</PackageId>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<RepositoryType>git</RepositoryType>
-		<NeutralLanguage>pt-BR</NeutralLanguage>
-		<Authors>luizgustavo77</Authors>
-		<Product>FTTBlazor</Product>
-		<PackageTags>NuGet;.NET 6;FTT</PackageTags>
-		<AssemblyVersion>$([System.DateTime]::Now.ToString(`yyyy.MM.dd.HHmm`))</AssemblyVersion>
-		<PackageVersion>1.0.0.2</PackageVersion>
-		<Description>
-			Functional study of Blazor WebAssembly with delivery of a library based on Material Design
-		</Description>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageIcon>logoMenu.png</PackageIcon>
-		<RepositoryUrl>https://github.com/luizgustavo77/FTTBlazor.git</RepositoryUrl>
+		<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
 	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<OutputPath>C:\Users\luiz_\output\</OutputPath>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<None Include="..\..\..\..\..\Downloads\logoMenu.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-		<None Include="..\..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
