--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 mono_crash.*
 
 # Build results
+nupkg/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -361,3 +362,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+*.dll
